@@ -22,6 +22,6 @@
   "depends": {
     "fabricloader": ">=${loader_version}",
     "fabric": "*",
-    "minecraft": "1.20.1"
+    "minecraft": "1.20.x"
   }
 }
