@@ -1,6 +1,7 @@
 1.1.c
 - Adjusted an entry in translation
-
+- Now if you have WorldEdit installed, the terrain where the post is build will be somewhat accomodated for it to be placed (softdepend)
+- Fixed the mod not being able to detect GriefDefender installed
 
 1.1.b
 - Added brazilean portuguese
